MB-6115: Increment seqno when deleting expired item

Change-Id: I91700696376c032280ff68b5d58ce0a38370efb1
Reviewed-on: http://review.couchbase.org/19448
Reviewed-by: Ketaki Gangal <ketakigangal@gmail.com>
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Tested-by: Chiyoung Seo <chiyoung.seo@gmail.com>